# kinesis-hr-llm-api

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
app/api/: dependencies.py
app/api/routers/: __init__.py  conversations.py  stores.py  webhook.py
app/api/schemas/: __init__.py  create_conversation.py  publish_message.py  store_document.py  update_application.py
app/core/: config.py
app/domain/: __init__.py  cv.py  jd.py  skill_level.py
app/domain/hireai_db/: __init__.py  applicant_dto.py
app/message_broker/: __init__.py  rabbitmq.py
app/services/: __init__.py  chat_engine.py  react_agent.py  vector_store_index.py
app/services/hireai_db/: __init__.py  applicant.py  interview_invitation.py
app/utils/: __init__.py  cv_json_to_text.py  jd_json_to_text.py
certbot/conf/: options-ssl-nginx.conf
nginx/conf.d/: default.conf
